some fixes + swagger
