# internal/transport/rest/auth.go
@@ -7,6 +7,17 @@ import (
 	"net/http"
 )
 
+// @Summary SignUp
+// @Tags auth
+// @Description create account
+// @ID create-account
+// @Accept  json
+// @Produce json
+// @Param   input body     domain.SignUpInput          true "account info"
+// @Success 201   {object} domain.StatusResponse
+// @Failure 400   {object} domain.ErrorResponse
+// @Failure 500   {object} domain.ErrorResponse
+// @Router /auth/sign-up [post]
 func (h *Handler) signUp(c *gin.Context) {
 	var input domain.SignUpInput
 	if err := c.BindJSON(&input); err != nil {
@@ -22,9 +33,20 @@ func (h *Handler) signUp(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, domain.StatusResponse{Status: "ok"})
+	c.JSON(http.StatusCreated, domain.StatusResponse{Status: "ok"})
 }
 
+// @Summary SignIn
+// @Tags auth
+// @Description login
+// @ID login
+// @Accept  json
+// @Produce json
+// @Param   input body     domain.SignInInput          true "account credentials"
+// @Success 201   {object} domain.StatusResponse
+// @Failure 400   {object} domain.ErrorResponse
+// @Failure 500   {object} domain.ErrorResponse
+// @Router /auth/sign-in [post]
 func (h *Handler) signIn(c *gin.Context) {
 	var input domain.SignInInput
 	if err := c.BindJSON(&input); err != nil {
@@ -43,13 +65,18 @@ func (h *Handler) signIn(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, domain.ErrorResponse{Message: "search user error"})
 		return
 	}
-
-	http.SetCookie(c.Writer, &http.Cookie{Name: "refresh-token",
-		Value:    refreshToken,
-		HttpOnly: true})
+	refreshTokenTTL := h.usersService.GetRefreshTokenTTL().Seconds()
+	c.SetCookie("refresh-token", refreshToken, int(refreshTokenTTL), "/", "localhost", false, true)
 	c.JSON(http.StatusOK, domain.TokenResponse{Token: accessToken})
 }
 
+// @Summary     Refresh
+// @Description Refresh tokens
+// @Tags        auth
+// @Produce     json
+// @Success     200     {object} domain.TokenResponse
+// @Failure     400,500 {object} domain.ErrorResponse
+// @Router      /auth/refresh [get]
 func (h *Handler) refresh(c *gin.Context) {
 	cookie, err := c.Cookie("refresh-token")
 	if err != nil {
@@ -64,9 +91,7 @@ func (h *Handler) refresh(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, domain.ErrorResponse{Message: "refresh tokens error"})
 		return
 	}
-
-	http.SetCookie(c.Writer, &http.Cookie{Name: "refresh-token",
-		Value:    refreshToken,
-		HttpOnly: true})
+	refreshTokenTTL := h.usersService.GetRefreshTokenTTL().Seconds()
+	c.SetCookie("refresh-token", refreshToken, int(refreshTokenTTL), "/", "localhost", false, true)
 	c.JSON(http.StatusOK, domain.TokenResponse{Token: accessToken})
 }
